<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin = "10sp"
    tools:context=".MainActivity">


    <com.google.android.material.imageview.ShapeableImageView
        android:id = "@+id/toploto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src = "@drawable/pvms_logo"
        android:layout_marginLeft = "30dp"
        android:layout_marginRight = "30dp"
        android:layout_marginTop = "10dp"
        app:layout_constraintDimensionRatio="8:4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <!-- BG -->
    <com.google.android.material.button.MaterialButton
        android:id = "@+id/carnumberreg_bt"
        style="@style/Bold"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:backgroundTint="#FBE5C9"
        android:elevation="5dp"
        android:padding="10dp"
        android:text="@string/carnumberreg_bt"
        android:textColor="#BF710F"
        android:layout_marginTop = "30dp"
        app:icon="@drawable/main_icon_carnumberreg"
        app:iconSize="40dp"
        app:iconGravity="top"
        app:iconTint="#BF710F"
        app:layout_constraintEnd_toStartOf="@id/carnumbersearch_bt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toploto"
        app:cornerRadius="15dp"/>

    <com.google.android.material.button.MaterialButton
        android:id = "@+id/carnumbersearch_bt"
        style="@style/Bold"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:backgroundTint="#009E8E"
        android:elevation="5dp"
        android:padding="10dp"
        android:text="@string/carnumbersearch_bt"
        android:textColor="#ABFBF2"
        android:layout_marginTop = "30dp"
        app:icon="@drawable/main_icon_carnumbersearch"
        app:iconSize="40dp"
        app:iconGravity="top"
        app:iconTint="#ABFBF2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/carnumberreg_bt"
        app:layout_constraintTop_toBottomOf="@+id/toploto"
        app:cornerRadius="15dp"/>

    <com.google.android.material.button.MaterialButton
        android:id = "@+id/camsearch_bt"
        style="@style/Bold"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:backgroundTint="#C52CEE"
        android:elevation="5dp"
        android:padding="10dp"
        android:text="@string/camsearch_bt"
        android:textColor="#ECB9F9"
        android:layout_marginTop = "30dp"
        app:icon="@drawable/main_icon_camsearch"
        app:iconSize="40dp"
        app:iconGravity="top"
        app:iconTint="#ECB9F9"
        app:layout_constraintEnd_toEndOf = "@id/carnumberreg_bt"
        app:layout_constraintStart_toStartOf="@id/carnumberreg_bt"
        app:layout_constraintTop_toBottomOf="@+id/carnumberreg_bt"
        app:cornerRadius="15dp"/>

    <com.google.android.material.button.MaterialButton
        android:id = "@+id/smsreg_bt"
        style="@style/Bold"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:backgroundTint="#F7716E"
        android:elevation="5dp"
        android:padding="10dp"
        android:text="@string/smsreg_bt"
        android:textColor="#FCD0CF"
        android:layout_marginTop = "30dp"
        app:icon="@drawable/main_icon_smsreg"
        app:iconSize="40dp"
        app:iconGravity="top"
        app:iconTint="#FCD0CF"
        app:layout_constraintEnd_toEndOf = "@id/carnumbersearch_bt"
        app:layout_constraintStart_toStartOf="@id/carnumbersearch_bt"
        app:layout_constraintTop_toBottomOf="@+id/carnumbersearch_bt"
        app:cornerRadius="15dp"/>

    <com.google.android.material.button.MaterialButton
        android:id = "@+id/parkresult_bt"
        style="@style/Bold"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:backgroundTint="#F0D042"
        android:elevation="5dp"
        android:padding="10dp"
        android:text="@string/parkresult_bt"
        android:textColor="#000000"
        android:layout_marginTop = "30dp"
        app:icon="@drawable/main_icon_parkresult"
        app:iconSize="40dp"
        app:iconGravity="top"
        app:iconTint="#000000"
        app:layout_constraintEnd_toEndOf = "@id/camsearch_bt"
        app:layout_constraintStart_toStartOf="@id/camsearch_bt"
        app:layout_constraintTop_toBottomOf="@+id/camsearch_bt"
        app:cornerRadius="15dp"/>

    <com.google.android.material.button.MaterialButton
        android:id = "@+id/setting_bt"
        style="@style/Bold"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:backgroundTint="#B8BAC8"
        android:elevation="5dp"
        android:padding="10dp"
        android:text="@string/setting_bt"
        android:textColor="#000000"
        android:layout_marginTop = "30dp"
        app:icon="@drawable/main_icon_setting"
        app:iconSize="40dp"
        app:iconGravity="top"
        app:iconTint="#000000"
        app:layout_constraintEnd_toEndOf = "@id/smsreg_bt"
        app:layout_constraintStart_toStartOf="@id/smsreg_bt"
        app:layout_constraintTop_toBottomOf="@+id/smsreg_bt"
        app:cornerRadius="15dp"/>


    <com.google.android.material.textview.MaterialTextView
        android:id = "@+id/version_text"
        style="@style/Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "주차 차량 관리 시스템 버전 V 1.0"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
